Fix: Fixed bottom border alignment

--- a/web_static/styles/3-footer.css
+++ b/web_static/styles/3-footer.css
@@ -2,8 +2,7 @@ footer {
     background-color: white;
     height: 60px;
     width: 100%;
-    border-bottom: 1px;
-    border-bottom-color: #CCCCCC;
+    border-top: 1px solid #CCCCCC;
     bottom: 0;
     position: fixed;
 }
